--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,12 @@
   box-sizing: border-box;
 }
 
+.banner .first-col {
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+}
+
 /*body {
   font-family: 'Montserrat-Regular', sans-serif;
   color: $paragraph-text-color;
@@ -412,78 +418,19 @@ button.close {
   background-color: $modal-backdrop-bg;
 }*/
 /*----------------------------------
---------------Home-Items------------
-------------------------------------*/
-/*
-.home-videos {
-  position: relative;
-
-  .video-buttons-container {
-    background-color: white;
-    border-radius: 15px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    padding: 20px;
-    @include box-shadow-properties(0 0 20px 0 rgba(0, 0, 0, 0.3));
-  }
-
-  .embed-responsive-16by9 {
-    &.red {
-      background-color: $language-bg;
-    }
-
-    &.green {
-      background-color: $science-bg;
-    }
-
-    &:after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      margin: auto;
-      height: 75px;
-      width: 108px;
-      background-image: url("../images/img-spritesheet.png");
-      background-position: -5px -62px;
-    }
-  }
-
-  p {
-    font-size: 0.9em;
-  }
-
-  h1 {
-    font-family: 'Montserrat-Medium';
-    font-size: 1.5em;
-    text-align: center;
-    color: $header-color1;
-    position: relative;
-    padding-bottom: 15px;
-    margin-bottom: 30px;
-
-    &:after {
-      content: "";
-      position: absolute;
-      width: 142px;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      height: 0;
-      margin: auto;
-      border: 1px solid #2f296e;
-    }
-  }
-
-  .btn-video {
-    width: 100%;
-  }
-}*/
-/*----------------------------------
 ---------------Main Menu------------
 ------------------------------------*/
+.main-menu .navbar {
+  margin: 0 -15px;
+}
+.main-menu .navbar-nav {
+  width: 100%;
+}
+.main-menu .nav-item {
+  width: 100%;
+  text-align: center;
+}
+
 /*
 %main-menu-button {
   height: 140px;
@@ -703,6 +650,80 @@ button.close {
     & > .dropdown-toggle.btn-primary:focus {
       background-color: $main-menu-bg-selected;
     }
+  }
+}*/
+/*----------------------------------
+--------------Home-Items------------
+------------------------------------*/
+.banner .first-col {
+  text-align: center;
+}
+
+/*
+.home-videos {
+  position: relative;
+
+  .video-buttons-container {
+    background-color: white;
+    border-radius: 15px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 20px;
+    @include box-shadow-properties(0 0 20px 0 rgba(0, 0, 0, 0.3));
+  }
+
+  .embed-responsive-16by9 {
+    &.red {
+      background-color: $language-bg;
+    }
+
+    &.green {
+      background-color: $science-bg;
+    }
+
+    &:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+      height: 75px;
+      width: 108px;
+      background-image: url("../images/img-spritesheet.png");
+      background-position: -5px -62px;
+    }
+  }
+
+  p {
+    font-size: 0.9em;
+  }
+
+  h1 {
+    font-family: 'Montserrat-Medium';
+    font-size: 1.5em;
+    text-align: center;
+    color: $header-color1;
+    position: relative;
+    padding-bottom: 15px;
+    margin-bottom: 30px;
+
+    &:after {
+      content: "";
+      position: absolute;
+      width: 142px;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 0;
+      margin: auto;
+      border: 1px solid #2f296e;
+    }
+  }
+
+  .btn-video {
+    width: 100%;
   }
 }*/
 /*----------------------------------
