--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,50 +6,6 @@ $site-slider: bienestar_laboral_home_slider;
 $path-site: edu-buscandocarrera;
 $images-path: "../images/"; //
 /* Colors -------------------------------*/
-$header-color1: #162873 !default;
-$header-color2: #008A85 !default;
-$main-bg: #E5E5E6 !default;
-$main-menu-bg: #59C0E4 !default;
-$main-menu-bg-hover: #4593C2 !default;
-$main-menu-bg-selected: #3165A0 !default;
-$heading-color: #2f296e !default;
-$paragraph-text-color: #5B5B5F !default;
-$paragraph-link-color: #30cbd2 !default;
-$red-menu-color: #DB405C !default;
-$modal-backdrop-bg: #131320 !default;
-$accordion-bg: #EFF1F5 !default;
-$accordion-text: #1D2B36 !default;
-$selected-accordion-bg: #8A898F !default;
-$science-bg: #93C14A !default;
-$science-banner-bg: #25833C !default;
-$science-banner-tx: #B4D06C !default;
-$science-pills-container-bg: #72A66C !default;
-$language-bg: #EA6357 !default;
-$language-banner-bg: #A92139 !default;
-$language-banner-tx: #F7C6C6 !default;
-$language-pills-container-bg: #C45258 !default;
-$maths-bg: #2099D6 !default;
-$maths-banner-bg: #005EA9 !default;
-$maths-banner-tx: #A3DAF7 !default;
-$maths-pills-container-bg: #3779B9 !default;
-$social-bg: #F6A409 !default;
-$social-banner-bg: #D54308 !default;
-$social-banner-tx: #FCD38E !default;
-$social-pills-container-bg: #DF6E3C !default;
-$pca-color: #3ebde1 !default;
-$cpa-color: #ffad46 !default;
-$brec-color: #ff5f5f !default;
-$phet-color: #002569 !default;
-$fort-color: #008A85 !default;
-$social-bar-bg: #00c0c9 !default;
-$see-more-hover: #3284BC !default;
-$header-link-selected: #ff8361 !default;
-$section-title-bg: $social-bar-bg !default;
-$footer-bg: white !default;
-$main-menu-items: #804AA0 !default;
-$head-table-bg: #6559bc;
-$body-table-bg: $heading-color;
-$tabs-hover-bg: #c3edec; //
-//Measures
+$gray-text: #4d4d4d !default; //Measures
 // -------------------------------
 $main-header-height: 132px;
