--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,2 @@
 @charset "UTF-8";
-@import "variables", "mixins", "fonts", "general", "header", "modal", "main-menu","banner","footer", "table", "media-query";
+@import "variables", "mixins", "fonts", "general", "header", "modal", "main-menu","banner","main-content","footer", "media-query";
