--- a/scss/_media-query.scss
+++ b/scss/_media-query.scss
@@ -1,7 +1,10 @@
 /*----------------------------------
 --------------Media Query-----------
 ------------------------------------*/
-/*/
+body {
+  font-size: 22px;
+}
+/*
 @media screen and (min-width: 1200px) {
   .bimester-content {
     .guide-modal-button,
