--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 ---------------Variables------------
 ------------------------------------*/
 /* Colors -------------------------------*/
+/*Measures*/
 /**
  * Mixins
  * --------------------------------------------------
@@ -791,32 +792,87 @@ button.close {
 /*----------------------------------
 -------------Main Content-----------
 ------------------------------------*/
-.main-content .image-container {
-  overflow: hidden;
+.main-content p {
+  position: relative;
 }
-.main-content .section-image {
-  width: 140%;
+.main-content p:before {
+  content: "";
   position: absolute;
-}
-.main-content .section-image.left {
-  left: -40%;
-  bottom: -40%;
+  width: 10px;
+  height: 63px;
+  background-color: gray;
+  top: 0;
+  left: -25px;
 }
 
 /*----------------------------------
 ----------------Footer--------------
 ------------------------------------*/
-/*.footer {
+.footer {
+  background-color: #808080;
   padding: 50px 0;
-  background: $footer-bg;
-}*/
+}
+.footer p {
+  color: #fff;
+  font-size: 0.7em;
+  font-family: "WorkSans-Light";
+}
+.footer p b {
+  font-family: "WorkSans-SemiBold";
+}
+
 /*----------------------------------
 --------------Media Query-----------
 ------------------------------------*/
-body {
-  font-size: 22px;
-}
+@media screen and (min-width: 1200px) {
+  body {
+    font-size: 21px;
+  }
 
+  .main-content .section-image {
+    width: 100%;
+  }
+  .main-content .image-container {
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  body {
+    font-size: 20px;
+  }
+
+  .main-content .image-container {
+    overflow: hidden;
+  }
+  .main-content .section-image {
+    width: 140%;
+    position: absolute;
+    bottom: -40%;
+  }
+  .main-content .section-image.left {
+    left: -40%;
+  }
+  .main-content .section-image.right {
+    right: -40%;
+  }
+}
+@media screen and (max-width: 991px) {
+  .main-content .image-container {
+    overflow: hidden;
+  }
+  .main-content .section-image {
+    width: 60%;
+    margin-bottom: -20%;
+  }
+  .main-content .section-image.left {
+    margin-left: -20%;
+  }
+  .main-content .section-image.right {
+    margin-right: -20%;
+  }
+}
 /*
 @media screen and (min-width: 1200px) {
   .bimester-content {
