--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,6 +6,9 @@ $site-slider: bienestar_laboral_home_slider;
 $path-site: edu-buscandocarrera;
 $images-path: "../images/"; //
 /* Colors -------------------------------*/
-$gray-text: #4d4d4d !default; //Measures
+$gray-text: #4d4d4d !default;
+$gray-footer-bg: #808080 !default;
+$white: #fff !default; //
+/*Measures*/
 // -------------------------------
 $main-header-height: 132px;
