--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,10 +1,20 @@
 /*----------------------------------
 ----------------Header--------------
 ------------------------------------*/
-.header-logo-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.header {
+  padding: 3% 4%;
+
+  .header-logo-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .gitei-link {
+    padding-right: 20px;
+    margin-right: 20px;
+    border-right: 1px solid $gray-footer-bg;
+  }
 }
 /*.header {
   background-color: $header-color1;
