--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,6 +8,9 @@ $images-path: "../images/"; //
 /* Colors -------------------------------*/
 $gray-text: #4d4d4d !default;
 $gray-footer-bg: #808080 !default;
+$white-menu: #f2f2f2 !default;
+$blue-menu-tx: #004a84 !default;
+$blue-menu-separator: #6699ff !default;
 $white: #fff !default; //
 /*Measures*/
 // -------------------------------
