--- a/css/style.css
+++ b/css/style.css
@@ -125,11 +125,6 @@ h1 {
   font-family: "WorkSans-Light";
 }
 
-.data-event {
-  font-size: 2.27em;
-  font-family: "WorkSans-SemiBold";
-}
-
 .btn-light {
   font-size: 1em;
   font-family: "WorkSans-Medium";
@@ -727,6 +722,43 @@ button.close {
 ------------------------------------*/
 .banner .first-col {
   text-align: center;
+  background: #f42f63 url("../images/banner_texture.png") no-repeat top center/cover;
+}
+.banner .first-row .data-event,
+.banner .first-row h1,
+.banner .first-row p {
+  color: #fff;
+}
+.banner .first-row .display-1 {
+  margin-top: 100px;
+}
+.banner .first-row .data-event {
+  font-size: 2.27em;
+  font-family: "WorkSans-SemiBold";
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  padding: 20px 40px;
+  margin: 80px 0 100px;
+}
+.banner .first-row .second-col {
+  background: url("../images/banner_photo.png") no-repeat center/cover;
+}
+.banner .first-row .second-col .row {
+  height: 100%;
+}
+.banner .first-row .first-half {
+  background-color: rgba(244, 47, 99, 0.4);
+  padding: 80px 40px 30px;
+}
+.banner .first-row .first-half p {
+  margin: 30px 0;
+}
+.banner .first-row .first-half .buttons-group {
+  text-align: center;
+}
+.banner .first-row .first-half .btn-light {
+  display: block;
+  margin: 0 auto 15px;
 }
 .banner .places .place-info label {
   font-size: 2.05em;
