--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -11,6 +11,7 @@ $gray-footer-bg: #808080 !default;
 $white-menu: #f2f2f2 !default;
 $blue-menu-tx: #004a84 !default;
 $blue-menu-separator: #6699ff !default;
+$red-banner: #f42f63 !default;
 $white: #fff !default; //
 /*Measures*/
 // -------------------------------
