Cambios en estilo de botones

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,6 +10,7 @@ $gray-text: #4d4d4d !default;
 $gray-footer-bg: #808080 !default;
 $white-menu: #f2f2f2 !default;
 $blue-menu-tx: #004a84 !default;
+$blue-icon-bg: #e2ecfd !default;
 $blue-menu-separator: #6699ff !default;
 $red-banner: #f42f63 !default;
 $white: #fff !default; //
