--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,21 @@ h1 {
 .btn-light {
   font-size: 1em;
   font-family: "WorkSans-Medium";
+  color: #004a84;
+  display: block;
+  margin: 0 auto 15px;
+  padding: 9px 40px 9px 60px;
+  border-radius: 0 55px 55px 0;
+  position: relative;
+}
+.btn-light:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50px;
+  height: 100%;
+  background: #e2ecfd;
 }
 
 /*body {
@@ -755,10 +770,6 @@ button.close {
 }
 .banner .first-row .first-half .buttons-group {
   text-align: center;
-}
-.banner .first-row .first-half .btn-light {
-  display: block;
-  margin: 0 auto 15px;
 }
 .banner .places .place-info label {
   font-size: 2.05em;
