--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,7 +1,6 @@
 /*----------------------------------
 ----------------General--------------
 ------------------------------------*/
-
 * {
   box-sizing: border-box;
 }
@@ -46,6 +45,22 @@ h1 {
 .btn-light {
   font-size: 1em;
   font-family: 'WorkSans-Medium';
+  color: $blue-menu-tx;
+  display: block;
+  margin: 0 auto 15px;
+  padding: 9px 40px 9px 60px;
+  border-radius: 0 55px 55px 0;
+  position: relative;
+
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50px;
+    height: 100%;
+    background: $blue-icon-bg;
+  }
 }
 /*body {
   font-family: 'Montserrat-Regular', sans-serif;
