--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -25,6 +25,12 @@
   font-weight: 500;
   src: url("../fonts/worksans/WorkSans-Medium.ttf");
 }
+@font-face {
+  font-family: 'CandyBeans';
+  font-style: normal;
+  font-weight: 500;
+  src: url("../fonts/candybeans/CandyBeans.otf");
+}
 /*@font-face {
   font-family: 'Montserrat-Bold';
   font-style: normal;
