--- a/scss/_media-query.scss
+++ b/scss/_media-query.scss
@@ -99,6 +99,14 @@
     }
   }
 
+  .banner {
+    .first-col {
+      .row {
+        justify-content: center;
+      }
+    }
+  }
+
   .main-menu {
     .nav-item {
       &:not(:last-child) {
