--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,7 +13,7 @@ $blue-menu-tx: #004a84 !default;
 $blue-icon-bg: #e2ecfd !default;
 $blue-menu-separator: #6699ff !default;
 $heading-color: $blue-menu-separator !default;
-$red-banner: #f42f63 !default;
+$blue-banner: #3366cc !default;
 $white: #fff !default; //
 /*Measures*/
 // -------------------------------
