--- a/form/css/estilos.css
+++ b/form/css/estilos.css
@@ -1,99 +1,91 @@
 /*HOJA DE ESTILOS LANDING VIRTUAL EDUCA*/
-
-body
-{
-	margin:0;
-	padding: 0;
-	color: white;
+body {
+  margin: 0;
+  padding: 0;
+  color: white;
+  overflow: hidden;
 }
 
-.formulario
-{
-	background-color: #3366cc;
-	padding: 20px;
-	-webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    font-size: 1.2em;
-}
-form
-{
-	color: white;
+.formulario {
+  background-color: #3366cc;
+  padding: 20px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  font-size: 1.2em;
 }
 
-img
-{
-	margin:2px;
+form {
+  color: white;
 }
 
-.centrada img
-{
-	margin: 0 auto;
+img {
+  margin: 2px;
 }
 
-.textura
-{
-	background-color: #13416F;
-	padding:20px 10px 20px 10px;
-	-webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
+.centrada img {
+  margin: 0 auto;
 }
 
-.logo
-{
-	margin-bottom:20px;
+.textura {
+  background-color: #13416F;
+  padding: 20px 10px 20px 10px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
 }
 
-.rowFormulario
-{
-	margin-top:20px;
-	
+.logo {
+  margin-bottom: 20px;
 }
+
+.rowFormulario {
+  margin-top: 20px;
+}
+
 /*FORMULARIO*/
-
 input[type=text], input[type=email], select, textarea {
-    width: 100%;
-    padding: 8px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+  width: 100%;
+  padding: 8px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
 }
 
 input[type=submit] {
-    width: 100%;
-    background-color: #f42f63;
-    color: white !important;
-    padding: 10px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  width: 100%;
+  background-color: #f42f63;
+  color: white !important;
+  padding: 10px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 input[type=submit]:hover {
-    background-color: #004a84;    
+  background-color: #004a84;
 }
 
 .form-landing input {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #333;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #333;
 }
 
 .form-landing textarea {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #333;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #333;
 }
 
 .form-landing select {
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #333;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #333;
 }
