--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -28,7 +28,7 @@ h1 {
   font-family: 'WorkSans-Light';
 
   b {
-    font-family: 'WorkSans-SemiBold';
+    font-family: 'CandyBeans';
   }
 }
 
@@ -62,6 +62,10 @@ h1 {
     height: 100%;
     background: $blue-icon-bg;
   }
+}
+
+.unal-white-logo {
+  margin: auto auto 35px;
 }
 /*body {
   font-family: 'Montserrat-Regular', sans-serif;
