--- a/scss/banner.scss
+++ b/scss/banner.scss
@@ -61,6 +61,11 @@
     }
   }
 
+  .group-buttons {
+    background-color: $white-menu;
+    padding: 30px 30px 20px;
+  }
+
   .places {
     .place-info {
       label {
