--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@ h1 {
   border-radius: 0 55px 55px 0;
   position: relative;
   line-height: 100%;
+  background-color: #fff;
 }
 .btn-light:before {
   content: "";
@@ -143,7 +144,13 @@ h1 {
   left: 0;
   width: 50px;
   height: 100%;
-  background: #e2ecfd;
+  background: #e2ecfd url("../images/img_spritesheet.png") no-repeat;
+}
+.btn-light.individual:before {
+  background-position: -7px -7px;
+}
+.btn-light.group:before {
+  background-position: -7px -58px;
 }
 
 .unal-white-logo {
@@ -525,6 +532,7 @@ button.close {
 .main-menu .nav-item .nav-link {
   color: #004a84;
   padding: 5px;
+  cursor: pointer;
 }
 
 /*
@@ -795,6 +803,10 @@ button.close {
 }
 .banner .first-row .first-half .buttons-group {
   text-align: center;
+}
+.banner .group-buttons {
+  background-color: #f2f2f2;
+  padding: 30px 30px 20px;
 }
 .banner .places .place-info label {
   font-size: 2.05em;
