--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -52,6 +52,7 @@ h1 {
   border-radius: 0 55px 55px 0;
   position: relative;
   line-height: 100%;
+  background-color: $white;
 
   &:before {
     content: "";
@@ -60,7 +61,19 @@ h1 {
     left: 0;
     width: 50px;
     height: 100%;
-    background: $blue-icon-bg;
+    background: $blue-icon-bg url("#{$images-path}img_spritesheet.png") no-repeat;
+  }
+
+  &.individual {
+    &:before {
+      background-position: -7px -7px;
+    }
+  }
+
+  &.group {
+    &:before {
+      background-position: -7px -58px;
+    }
   }
 }
 
