--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background: #fff url("../images/main_bg.png") no-repeat center 0/cover;
+}
+
 p {
   font-family: "WorkSans-Regular";
   line-height: 105%;
@@ -807,6 +811,9 @@ button.close {
 .banner .group-buttons {
   background-color: #f2f2f2;
   padding: 30px 30px 20px;
+}
+.banner .places img {
+  margin: 15px 0;
 }
 .banner .places .place-info label {
   font-size: 2.05em;
