--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background: $white url("#{$images-path}main_bg.png") no-repeat center 0 /cover;
+}
+
 %center-vh {
   display: flex!important;
   align-items: center;
