--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -2,6 +2,15 @@
  * Mixins
  * --------------------------------------------------
  */
+@mixin background-gradient-properties($color1, $color2) {
+  background: $color1;
+  background: -moz-linear-gradient(left, $color1 0%, $color2 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, $color1), color-stop(100%, $color2));
+  background: -webkit-linear-gradient(left, $color1 0%, $color2 100%);
+  background: -o-linear-gradient(left, $color1 0%, $color2 100%);
+  background: -ms-linear-gradient(left, $color1 0%, $color2 100%);
+  background: linear-gradient(to right, $color1 0%, $color2 100%);
+}
 /*@mixin transition-properties($values) {
   -webkit-transition: $values;
   -moz-transition: $values;
