--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -14,6 +14,7 @@ $blue-icon-bg: #e2ecfd !default;
 $blue-menu-separator: #6699ff !default;
 $heading-color: $blue-menu-separator !default;
 $blue-banner: #3366cc !default;
+$pink-description-title: #f42f63 !default;
 $white: #fff !default; //
 /*Measures*/
 // -------------------------------
