--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -15,7 +15,9 @@ body {
   justify-content: center;
 }
 
-p {
+li,
+p,
+td {
   font-family: 'WorkSans-Regular';
   line-height: 105%;
   font-size: 0.85em;
