--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -15,6 +15,7 @@ $blue-menu-separator: #6699ff !default;
 $heading-color: $blue-menu-separator !default;
 $blue-banner: #3366cc !default;
 $pink-description-title: #f42f63 !default;
+$purple-award-title: #be0c4d !default;
 $white: #fff !default; //
 /*Measures*/
 // -------------------------------
