--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -1,6 +1,7 @@
 /*----------------------------------
 ----------------General--------------
 ------------------------------------*/
+
 * {
   box-sizing: border-box;
 }
@@ -26,6 +27,10 @@ td {
 
 h1 {
   font-size: 2.27em;
+  font-family: 'WorkSans-Light';
+}
+
+h2 {
   font-family: 'WorkSans-Light';
 }
 
