--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,6 @@
   -ms-border-radius: $value;
   border-radius: $value;
 }
-@mixin box-shadow-properties($value) {
-  -webkit-box-shadow: $value;
-  -moz-box-shadow: $value;
-  box-shadow: $value;
-}
 @mixin background-button-properties($color1, $color2) {
   background: $color1 !important;
   background: -moz-linear-gradient(top, $color1 0%, $color2 100%) !important;
@@ -108,6 +103,10 @@ td {
   color: #4d4d4d;
 }
 
+li {
+  margin-bottom: 10px;
+}
+
 h1 {
   font-size: 2.27em;
   font-family: "WorkSans-Light";
@@ -165,6 +164,12 @@ h2 {
 
 .unal-white-logo {
   margin: auto auto 35px;
+}
+
+.shadow-line-bottom {
+  -webkit-box-shadow: inset 0 -13px 10px -10px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: inset 0 -13px 10px -10px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 0 -13px 10px -10px rgba(0, 0, 0, 0.15);
 }
 
 /*body {
@@ -906,6 +911,10 @@ button.close {
 /*----------------------------------
 -------------Main Content-----------
 ------------------------------------*/
+.main-content h1 {
+  text-align: center;
+  margin: 0 0 15px;
+}
 .main-content p:first-of-type {
   position: relative;
 }
@@ -930,21 +939,24 @@ button.close {
 .main-content .description-section p:first-of-type:before {
   background-color: #f42f63;
 }
-.main-content .challenge-section h1,
-.main-content .participant-section h1 {
+.main-content .award-section h1,
+.main-content .challenge-section h1 {
   color: #6699ff;
 }
-.main-content .challenge-section p:first-of-type:before,
-.main-content .participant-section p:first-of-type:before {
+.main-content .award-section p:first-of-type:before,
+.main-content .challenge-section p:first-of-type:before {
   background-color: #6699ff;
 }
-.main-content .award-section h1,
-.main-content .organizers-section h1 {
+.main-content .organizers-section h1,
+.main-content .participant-section h1 {
   color: #be0c4d;
 }
-.main-content .award-section p:first-of-type:before,
-.main-content .organizers-section p:first-of-type:before {
+.main-content .organizers-section p:first-of-type:before,
+.main-content .participant-section p:first-of-type:before {
   background-color: #be0c4d;
+}
+.main-content .organizers-section {
+  margin-bottom: 30px;
 }
 
 /*----------------------------------
