--- a/scss/_media-query.scss
+++ b/scss/_media-query.scss
@@ -116,6 +116,14 @@
       }
     }
   }
+
+  .modal-body {
+    embed,
+    iframe,
+    object {
+      min-height: 80vh;
+    }
+  }
 }
 /*
 @media screen and (min-width: 1200px) {
